--- a/css/manichino.css
+++ b/css/manichino.css
@@ -10,7 +10,7 @@
 	display:block;
 	top:-500px;
 	left:-500px;
-	opaticy:0;
+	opacity:0;
 	width:fit-content;
 	background-color:#FFF;
 	box-shadow:0px 0px 3px rgba(0,0,0,0.5);
