--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -73,12 +73,17 @@
 	background-position:left center;
 	background-repeat:no-repeat;
 	vertical-align:middle;
-	cursor:pointer;
 	font-weight:bold;
 	text-overflow:ellipsis;
 	overflow:hidden;
 }
-.pallinoPat:hover{
+.pallinoPat:not(.ptNoSel){
+	cursor:pointer;
+}
+.pallinoPat.ptNoSel{
+	cursor:default !important;
+}
+.pallinoPat:not(.ptNoSel):hover{
 	background-color:rgba(255,255,255,0.3);
 	border-radius:3px;
 }
