Aggiunta puntina per fissare il menu espanso su mobile

--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -68,6 +68,11 @@
     	--menu-width: 300px;
 	}
 }
+@media (max-width: 699px){
+	:root {
+    	--menu-width: 100%;
+	}
+}
 
 *{
 	-webkit-text-size-adjust:none;
