--- a/css/forms - Copia.css
+++ b/css/forms - Copia.css
@@ -25,7 +25,8 @@ input, textarea{
 	height:auto !important;
 }
 .submitBtn,
-.annullaBtn{
+.annullaBtn,
+.stampaBtn{
 	width: 100px;
 	clear: both;
 	border-radius: 3px;
@@ -47,7 +48,8 @@ input, textarea{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606060', endColorstr='#2b2b2b',GradientType=0 );
 }
 .submitBtn:not(.disBtn):hover,
-.annullaBtn:not(.disBtn):hover{
+.annullaBtn:not(.disBtn):hover,
+.stampaBtn:not(.disBtn):hover{
 	background: #3b3b3b;
 	background: -moz-linear-gradient(top, #707070 0%, #3b3b3b 100%);
 	background: -webkit-linear-gradient(top, #707070 0%,#3b3b3b 100%);
@@ -74,7 +76,8 @@ body:not(.smart) #scheda:not(.h150) .formBtn{
 /*.schLibera .submitBtn,
 .schLibera .annullaBtn{*/
 body:not(.smart) .submitBtn,
-body:not(.smart) .annullaBtn{
+body:not(.smart) .annullaBtn,
+body:not(.smart) .stampaBtn{
     width: auto !important;
     height: 32px !important;
     line-height: 32px !important;
