--- a/css/forms.css
+++ b/css/forms.css
@@ -10,12 +10,22 @@ form{
 input::-moz-placeholder{
 	opacity:0;
 }
-input, textarea{
+input,
+textarea{
 	-webkit-user-select: text !important;
 	-khtml-user-select: text !important;
 	-moz-user-select: text !important;
 	-ms-user-select: text !important;
 	user-select: text !important;
+}
+.contStampa input[type='text'],
+.contStampa input[type='email'],
+.contStampa textarea,
+.contStampa .date{
+	border-top:none !important;
+	border-left:none !important;
+	border-right:none !important;
+	border-radius:0px !important;
 }
 
 /* PULSANTI IN FONDO AI FORMS */
@@ -25,7 +35,8 @@ input, textarea{
 	height:auto !important;
 }
 .submitBtn,
-.annullaBtn{
+.annullaBtn,
+.stampaBtn{
 	width: 100px;
 	clear: both;
 	border-radius: 3px;
@@ -47,7 +58,8 @@ input, textarea{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606060', endColorstr='#2b2b2b',GradientType=0 );
 }
 .submitBtn:not(.disBtn):hover,
-.annullaBtn:not(.disBtn):hover{
+.annullaBtn:not(.disBtn):hover,
+.stampaBtn:not(.disBtn):hover{
 	background: #3b3b3b;
 	background: -moz-linear-gradient(top, #707070 0%, #3b3b3b 100%);
 	background: -webkit-linear-gradient(top, #707070 0%,#3b3b3b 100%);
@@ -93,7 +105,8 @@ body:not(.smart) #scheda:not(.h150) .formBtn{
 /*.schLibera .submitBtn,
 .schLibera .annullaBtn{*/
 body:not(.smart) .submitBtn,
-body:not(.smart) .annullaBtn{
+body:not(.smart) .annullaBtn,
+body:not(.smart) .stampaBtn{
     width: auto !important;
     height: 32px !important;
     line-height: 32px !important;
@@ -101,7 +114,12 @@ body:not(.smart) .annullaBtn{
     padding-left: 15px !important;
     padding-right: 15px !important;
 }
-
+.contStampa .stampaBtn{
+	display: none !important;
+}
+#btn_stampa{
+	margin-top:30px !important;
+}
 
 
 
