--- a/css/ricerche.css
+++ b/css/ricerche.css
@@ -2,16 +2,17 @@
 /* CSS Document */
 
 #parolaGlobal{
-	width: calc(100% + 9px);
+	width: calc(100% - 86px);
     background-color: #FFF;
-    text-align: center;
+    /*text-align: center;*/
     color: #000;
     text-overflow: ellipsis;
     border: 3px solid #2f2e2b;
     margin-left: -10px;
     margin-right: -7px;
     margin-top: -3px;
-    font-weight: bold;
+   /* font-weight: bold;*/
+	padding-left:10px;
 }
 body:not(.smart) #parolaGlobal{
     height: 36px !important;
@@ -22,25 +23,41 @@ body:not(.smart) #parolaGlobal{
 }
 #parolaGlobal::-webkit-input-placeholder{
 	font-weight:normal !important;
-	text-align:center !important;
+	/*text-align:center !important;*/
 	font-size:10px !important;
+	padding-left:2px;
 }
 #parolaGlobal::-moz-placeholder{
 	opacity:0.5 !important;
 	font-weight:normal !important;
-	text-align:center !important;
+	/*text-align:center !important;*/
 	font-size:10px !important;
+	padding-left:2px;
 }
-#annGlobal{
-	width: 16px;
-    height: 16px;
+#cerca_btn{
+    display: inline-block;
+    height: 30px !important;
+    line-height: 30px !important;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: #FFF;
+    box-shadow: 0px 0px 3px rgb(0 0 0 / 50%);
+    cursor: pointer;
+    width: 95px;
+    background-color: #3f51b5;
+}
+#annGlobal {
+    width: 30px;
+    height: 30px;
     background: url(../img/ch.png) no-repeat center center;
-    background-size: contain;
-    right: 40px;
-    margin-top: 7px;
+    background-size: 16px;
+    background-position: center center;
     cursor: pointer;
     position: absolute;
     z-index: 16;
+    margin-left: -30px;
 }
 .boxMnOp:not(.globalOk) #annGlobal{
     right: var(--menu-width) !important;
