--- a/css/ricerche.css
+++ b/css/ricerche.css
@@ -48,6 +48,11 @@ body:not(.smart) #parolaGlobal{
     width: 95px;
     background-color: #3f51b5;
 }
+.smart #cerca_btn{
+	height: 38px !important;
+    line-height: 38px !important;
+    vertical-align: top;
+}
 #annGlobal {
     width: 30px;
     height: 30px;
