--- a/css/popup_versione.css
+++ b/css/popup_versione.css
@@ -12,6 +12,7 @@
 }
 body:not(.AM):not(.AM_light) #contVersione{
 	padding-top:0px !important;
+	margin-top: -20px;
 }
 body:not(.AM):not(.AM_light) #contVersione img{
 	margin-top:-10px !important;
