--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -95,12 +95,12 @@
 	border-radius:3px;
 }
 .pallinoPatEsteso{
-	text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+	text-overflow: ellipsis !important;
+    overflow: hidden !important;
+    white-space: nowrap !important;
     width: calc(100% - 20px);
-	height: 30px;
-    line-height: 30px;
+	height: 30px !important;
+    line-height: 30px !important;
 }
 .pallinoPat i,
 .pallinoTsubo i{
