--- a/css/popup_versione.css
+++ b/css/popup_versione.css
@@ -17,6 +17,10 @@ body:not(.AM):not(.AM_light) #contVersione{
 body:not(.AM):not(.AM_light) #contVersione img{
 	margin-top:-10px !important;
 }
+.AM #contVersione,
+.AM_light #contVersione{
+	margin-top:-20px !important;
+}
 #contVersione, #contColori{
 	padding-left:30px;
 	padding-right:30px;
