Tolto fondino per immagini dettagli anatomici su colori blu e nera

--- a/css/manichino.css
+++ b/css/manichino.css
@@ -102,6 +102,8 @@
 .dettaglioAnatomia{
 	float: right;
     margin: -30px;
+}
+.bodyStyled2 .dettaglioAnatomia{
     background-blend-mode: multiply;
     background-repeat: no-repeat;
     background-color: #eae8e3;
