--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -191,7 +191,8 @@ body:not(.bodyStyled1):not(.bodyStyled2):not(.smart) #p_set{ /* <<<<<<<<<<<< NUO
 	cursor:default !important;
 	opacity: 0.6 !important;
 }
-body:not(.smart) .listaMeridiani{
+body:not(.smart) .listaMeridiani,
+body.smart #elenchi.schExp .listaMeridiani{
 	height: calc(100% - 48px) !important;
 }
 .smart #elenchi:not(.schExp) .listaMeridiani{
@@ -605,10 +606,11 @@ body:not(.smart) #meridianiSmart_cont div:not(.elencoSel):hover{
 	box-shadow:0px 0px 3px rgba(0,0,0,0.5);
 	cursor:pointer;
 }
-body.smart #selectCambioMeridiani{
+body.smart #elenchi:not(.schExp) #selectCambioMeridiani{
 	display:none;
 }
 
-body:not(.smart) #cambioSistemaMeridiani{
+body:not(.smart) #cambioSistemaMeridiani,
+body.smart #elenchi.schExp #cambioSistemaMeridiani{
 	display:none;
 }
