--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -199,7 +199,8 @@ body:not(.bodyModello) #logoSovra{
 	width:100%;
 	height:230px;
 	padding-top:160px;
-	margin-top:-130px;
+	/*margin-top:-130px;*/
+	margin-top:-50px;
 	background-image:url(../img/logo_iaomai.png);
 	background-position:center center;
 	background-size:auto 130px;
@@ -216,14 +217,15 @@ body:not(.bodyModello) #logoSovra{
 	background-position:left center;
 	background-size:contain;
 	mix-blend-mode: lighten;
+	margin-top:20px;
 }
 
-@media (max-width: 800px){
+/*@media (max-width: 800px){*/
 	#car_inizio{
 		background-blend-mode: lighten;
 		background-color: #0054a7;
 	}
-}
+/*}*/
 
 
 #loader, #fotoBig{
