--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -409,15 +409,15 @@ body:not(.touch) .listaMeridiani .spazioDopo{
 	position: fixed;
     top: 5px;
     right: 5px;
-	width:30px;
-	height:30px;
+	width:40px;
+	height:40px;
 	/*background-image:url(../../img/jingB.png);*/
 	background-image:url(../../img/ico_meridianiB.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: 24px;
 	cursor:pointer;
-	border-radius:15px;
+	border-radius:6px;
 	background-color: rgba(0,0,0,0.2);
 }
 /*body.bodyStyled2:not(.smart) #meridianiSmart_ico{
@@ -437,9 +437,10 @@ body:not(.touch) .listaMeridiani .spazioDopo{
 }
 #meridianiSmart_cont{
 	position: fixed;
-    top: 36px;
+    top: 48px;
     right: 6px;
-	display:none;
+    display: none;
+    padding: 2px;
 }
 
 body:not(.bodyModello) #meridianiSmart_cont,
@@ -452,10 +453,10 @@ body:not(.bodyModello) #btns_set > div{
     right: 0px !important;
 }
 #meridianiSmart_cont div{
-	width: 24px;
-    height: 24px;
-    line-height: 24px;
-    border-radius: 12px;
+	width: 30px;
+    height: 30px;
+    line-height: 28px;
+    border-radius: 15px;
     text-align: center;
     font-size: 9px;
     margin: 2px;
